--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello, World!
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+
+<h1>title</h1>
+<p>Hello, World!</p>
+
+</body>
+</html>
