--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <h1>title</h1>
 <p>Hello, World!</p>
 
+<img src="images/jupiterpole.jpg" alt="jupiterpole" width="350" height="350">
 </body>
 </html>
