some about and index changes2

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 </head>
 <body>
 
-<h1>title</h1>
+<h1>Some Title</h1>
+
+<a href="about.html">ABOUT</a>
 <p>Hello, World!</p>
 
-<img src="images/jupiterpole.jpg" alt="jupiterpole" width="350" height="350">
+<img src="images/jupiterpole.jpg" alt="jupiterpole" width="350" height="350"/>
 </body>
 </html>
