--- a/about.html
+++ b/about.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Some Testing Page</title>
+	<title>About Page</title>
 </head>
 <body>
 
-<h1>title</h1>
-<p>Hello, World!</p>
+<h1>About</h1>
+	<p>   
+	This site is a sample project for the <strong>awesome</strong> Git
+      tutorial <em>Learn Enough™ Git to Be Dangerous</em>.
+
+  </p>
 
 <img src="images/jupiterpole.jpg" alt="jupiterpole" width="350" height="350">
 </body>
