--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <a href="about.html">ABOUT</a>
 <p>Hello, World!</p>
 
-<img src="images/jupiterpole.jpg" alt="jupiterpole" width="350" height="350"/>
+ href="https://www.flickr.com/photos/28883788@N04/10097824543">
+<img src="images/jupiterpole.jpg" alt="jupiterpole" width="350" height="350">
+	</a>
 </body>
 </html>
