--- a/about.html
+++ b/about.html
@@ -7,12 +7,14 @@
 <body>
 
 <h1>About</h1>
+
   <a href="http://learnenough.com/git-tutorial"><em>Learn Enough Git to Be Dangerous</em></a>
 	<p>   
 	This site is a sample project for the <strong>awesome</strong> Git
       tutorial <em>Learn Enough™ Git to Be Dangerous</em>.
   </p>
-
+    <a href="https://www.flickr.com/photos/28883788@N04/10097824543">
 <img src="images/jupiterpole.jpg" alt="jupiterpole" width="350" height="350">
+	</a>
 </body>
 </html>
