--- a/about.html
+++ b/about.html
@@ -16,5 +16,8 @@
     <a href="https://www.flickr.com/photos/28883788@N04/10097824543">
 <img src="images/jupiterpole.jpg" alt="jupiterpole" width="350" height="350">
 	</a>
+
+	<img src="images/jupiterside.jpg" alt="jupiterside" width="350" height="350">
+	
 </body>
 </html>
