--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>About Us</h1>
+<h1>About</h1>
 
   <a href="http://learnenough.com/git-tutorial"><em>Learn Enough Git to Be Dangerous</em></a>
 	<p>   
