remove image merge test

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 	</a>
 
 
-	<img src="images/jupiterside.jpg" alt="jupiterside" width="350" height="350">
+	<!-- <img src="images/jupiterside.jpg" alt="jupiterside" width="350" height="350"> -->
 	
 </body>
 </html>
