--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p>Hello, World!</p>
 
  href="https://www.flickr.com/photos/28883788@N04/10097824543">
-<img src="images/jupiterpole.jpg" alt="jupiterpole" width="350" height="350">
+<img src="images/jupiterpole.jpg" alt="jupiter-pole" width="350" height="350">
 	</a>
 </body>
 </html>
