--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- Fix Trademark -->
+	<meta charset="utf-8">
 	<title>Some Testing Page</title>
 </head>
 <body>
