--- a/about.html
+++ b/about.html
@@ -5,17 +5,22 @@
 	<title>About Page</title>
 </head>
 <body>
+	    <div>
+      <a href="index.html">Home</a>
+      <a href="tags.html">HTML Tags</a>
+      <a href="moby_dick.html">Moby Dick</a>
+    </div>
 
-<h1>About</h1>
 
-  <a href="http://learnenough.com/git-tutorial"><em>Learn Enough Git to Be Dangerous</em></a>
-	<p>   
-	This site is a sample project for the <strong>awesome</strong> Git
-      tutorial <em>Learn Enough™ Git to Be Dangerous</em>.
-  </p>
-    <a href="https://www.flickr.com/photos/28883788@N04/10097824543">
-		<img src="images/jupiterpole.jpg" alt="jupiterpole" width="350" height="350">
-	</a>
+		<h1>About</h1>
+
+	  <a href="http://learnenough.com/git-tutorial"><em>Learn Enough Git to Be Dangerous</em></a>
+			<p>This site is a sample project for the <strong>awesome</strong> Git
+	      tutorial <em>Learn Enough™ Git to Be Dangerous</em>.
+	  	</p>
+	    <a href="https://www.flickr.com/photos/28883788@N04/10097824543">
+			<img src="images/jupiterpole.jpg" alt="jupiterpole" width="350" height="350">
+		</a>
 
 
 	<!-- <img src="images/jupiterside.jpg" alt="jupiterside" width="350" height="350"> -->
